front with no problem

--- a/client/src/pages/Home/styles.module.css
+++ b/client/src/pages/Home/styles.module.css
@@ -81,7 +81,7 @@
     font-weight: 500;
     padding: 12px 25px;
     color: white;
-    background-color: #ffc801;
+    background-color: #3343FF;
     border-radius: 12px;
     margin: 10px 0 0 0;
     outline: none;
@@ -99,5 +99,5 @@
 .text>a {
     font-size: 16px;
     font-weight: 500;
-    color: #ffc801;
+    color: #3343FF;
 }
