--- a/client/src/pages/Home/styles.module.css
+++ b/client/src/pages/Home/styles.module.css
@@ -1,4 +1,33 @@
-.heading {
+.navbar {
+    width: 100%;
+    height: 70px;
+    background-color: #3622e6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar h1 {
+    color: white;
+    font-size: 25px;
+    margin-left: 20px;
+}
+
+.btn {
+    font-size: 18px;
+    font-weight: 500;
+    padding: 12px 25px;
+    color: white;
+    background-color: #33f1ff;
+    border-radius: 12px;
+    margin: 10px 0 0 0;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+/*.heading {
     font-size: 40px;
     font-weight: 600;
     color: #2c444e;
@@ -76,17 +105,17 @@
     font-size: 13px;
 }
 
-.btn {
-    font-size: 18px;
-    font-weight: 500;
-    padding: 12px 25px;
-    color: white;
-    background-color: #3343FF;
-    border-radius: 12px;
-    margin: 10px 0 0 0;
-    outline: none;
+.white_btn {
     border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
     cursor: pointer;
+    margin-right: 20px;
 }
 
 .text {
@@ -100,4 +129,4 @@
     font-size: 16px;
     font-weight: 500;
     color: #3343FF;
-}
+}*/
