--- a/client/src/pages/welcome/NavbarStyles.css
+++ b/client/src/pages/welcome/NavbarStyles.css
@@ -1,3 +1,52 @@
+.NavbarItems{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,.25);
+    width: 95%;
+    height: 88px;
+    border-radius: 13px;
+
+
+}
+.navbar-logo{
+    color:black;
+    font-size: 2rem;
+    cursor: pointer;
+
+}
+.nav-menu{
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    grid-gap: 2rem;
+    list-style: none;
+    align-items: center;
+
+
+}
+.nav-links{
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    grid-gap: 0.7rem;
+    text-decoration: none;
+    color:black;
+    font-size:1.2rem;
+    font-weight: 600;
+    padding : 0.7rem 1rem;
+    white-space: nowrap;
+}
+.nav-links a{
+    text-decoration: none;
+    color:black;
+    white-space: nowrap;
+}
+
+.nav-links:hover{
+    background-color: darkcyan;
+    color: white;
+
+}
 
 
 
