--- a/client/src/pages/welcome/NavbarStyles.css
+++ b/client/src/pages/welcome/NavbarStyles.css
@@ -12,7 +12,7 @@
 }
 .navbar-logo{
     color:black;
-    font-size: 2rem;
+    font-size: 1.2rem;
     cursor: pointer;
 
 }
@@ -38,13 +38,15 @@
 }
 .nav-links a{
     text-decoration: none;
-    color:black;
+    color:#304EF2;
     white-space: nowrap;
 }
 
 .nav-links:hover{
-    background-color: darkcyan;
+    background-color: #304EF2;
     color: white;
+    border-radius: 4px;
+    transition: all 0.4s ease-in-out;
 
 }
 
