--- a/client/src/pages/welcome/NavbarStyles.css
+++ b/client/src/pages/welcome/NavbarStyles.css
@@ -7,6 +7,7 @@
     width: 95%;
     height: 88px;
     border-radius: 13px;
+    
 
 
 }
@@ -50,7 +51,50 @@
 
 }
 
+@media screen and (max-width : 850px){
+    .NavbarItems{
+        z-index: 99;
+    }
+    .nav-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: white;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    opacity: 0;
+    align-items: stretch;
+    padding: 80px 0 30px 0;
+    margin:0;
+ 
+   
 
 
+}
+.nav-menu.active{
+    left:0;
+    opacity: 1;
+    z-index: -1;
 
+}
+.nav-links{
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 2rem 0;
+    background-color: white;
+    color:black
+}
+.nav-links:hover{
+   background-color:#304EF2;
+   color:white;
+   transition: none;
+
+}
+
+
+}
 
