--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,12 @@
-
+.container {
+    width: 100vw;
+    height: 100vh;
+    background-color: #f0f8ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .App {
     font-family: sans-serif;
     text-align: center;
