--- a/client/src/pages/Main/index.css
+++ b/client/src/pages/Main/index.css
@@ -1,9 +1,74 @@
 .App {
-    max-width: 800px;
+    /*max-width: 800px;*/
     margin: 0 auto;
-    padding: 20px;
-}
+    /*padding: 20px;*/
+    display: flex;
+    text-align: center;
+    
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+   
 
+}
+.sidemenu{
+    width: 300px;
+    border : 1px solid #304EF2;
+    background-color: #304EF2;
+    color: white;
+     box-shadow: 5px 20px 20px 0 rgba(0, 0, 0, 0.25);
+}
+.chatbox{
+    flex: 1;
+    
+    position: relative;
+   
+}
+.side-menu-button{
+padding: 15px;
+border: 1px solid white;
+border-radius: 5px;
+text-align:left;
+transition: ease 0.25s all;
+}
+.side-menu-button:hover{
+    background-color:  #4c65f5;
+    
+}
+.side-menu-button span{
+padding-left: 6px;
+padding-right: 12px;
+
+}
+.chat-log{
+    padding: 24px;
+    text-align: left;
+    display: flex;
+  
+  
+}
+.chat-message{
+    padding: 12px;
+    display: flex;
+    padding-left: 40px;
+    padding-right: 40px;
+    max-width: 400px;
+   /* margin-left: auto;
+    margin-right: auto;*/
+
+}
+/*.avatar{
+
+}*/
+.message{
+
+}
+.result{
+   
+
+}
 h1 {
     font-size: 2em;
     text-align: center;
@@ -17,9 +82,14 @@ h1 {
 input[type="text"] {
     flex: 1;
     padding: 10px;
-    border: 1px solid #ccc;
+    width: 90%;
+    border: 1px solid black;
     border-radius: 4px;
     margin-right: 10px;
+}
+input[type="text"]:hover,
+input[type="text"]:focus {
+  border: 1px solid  #304EF2;
 }
 
 button {
@@ -33,6 +103,7 @@ button {
 
 .article-container {
     margin-top: 20px;
+    
 }
 
 h2 {
