--- a/client/src/pages/Main/index.css
+++ b/client/src/pages/Main/index.css
@@ -65,7 +65,9 @@ padding-right: 12px;
 .message{
 
 }
-.result{
+.result h1{
+    color: #304EF2;
+    margin-bottom: 70px;
    
 
 }
@@ -82,10 +84,12 @@ h1 {
 input[type="text"] {
     flex: 1;
     padding: 10px;
-    width: 90%;
+    width: 70%;
+    height: 27px;
     border: 1px solid black;
     border-radius: 4px;
     margin-right: 10px;
+    margin-top: 30px;
 }
 input[type="text"]:hover,
 input[type="text"]:focus {
@@ -94,11 +98,13 @@ input[type="text"]:focus {
 
 button {
     padding: 10px;
-    background-color: #2196f3;
+    background-color: #304EF2;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    height: 48px;
+    width: 140px;
 }
 
 .article-container {
