--- a/client/src/pages/Main/index.css
+++ b/client/src/pages/Main/index.css
@@ -10,9 +10,68 @@
     left: 0;
     right: 0;
 }
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1rem;
+}
+
+th, td {
+  border: 1px solid #ccc;
+  padding: 1rem;
+  text-align: left;
+}
+
+th {
+  background-color: #f5f5f5;
+  color: #222;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #fafafa;
+}
+
+td:nth-child(3) {
+  font-weight: bold;
+  color: #d32121;
+}
+
+@media (max-width: 767px) {
+  th, td {
+    display: block;
+    width: 100%;
+  }
+  
+  td:nth-child(3) {
+    text-align: center;
+  }
+  
+  tbody tr {
+    border-bottom: 1px solid #ccc;
+    display: block;
+    margin-bottom: .625em;
+  }
+  
+  tbody td {
+    text-align: right;
+    padding-left: 50%;
+    position: relative;
+  }
+  
+  tbody td:before {
+    content: attr(data-label);
+    display: inline-block;
+    font-weight: bold;
+    left: 0;
+    position: absolute;
+    text-align: left;
+    top: .625em;
+  }
+}
 
 .sidemenu {
-    width: 300px;
+    width: 360px;
     border: 1px solid #304EF2;
     background-color: #304EF2;
     color: white;
@@ -64,7 +123,7 @@
 
 .result h1 {
     color: #304EF2;
-    margin-bottom: 70px;
+    margin-bottom: 30px;
 }
 
 h1 {
@@ -74,7 +133,7 @@ h1 {
 
 .input-container {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 input[type="text"] {
@@ -112,18 +171,25 @@ h2 {
     font-size: 1.5em;
 }
 
-.author,
-.source,
-.date {
-    font-style: italic;
+
+.robot-icon{
+    width: 3rem;
+    height: 3rem;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.body {
-    white-space: pre-line;
-    margin-top: 10px;
+li {
+  padding: 5px;
+  background-color: #eeeeee0e;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
-.topic {
-    font-weight: bold;
-    margin-top: 10px;
+li:hover {
+  background-color: #ccc;
 }
