--- a/client/src/pages/Demo/stylesdemo.css
+++ b/client/src/pages/Demo/stylesdemo.css
@@ -1,53 +1,11 @@
 .container {
     width: 100vw;
     height: 100vh;
-    background-color: #f0f8ff;
+    background-color: #f0f8ff !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.containerr {
-    width: 100vw;
-    height: 100vh;
-    background-image: url('../../../public/images/bg.jpg');
-    /* Replace 'background.jpg' with your image file */
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.profileContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    /* Adjust the margin-bottom value to your desired spacing */
-}
-
-.profileImage {
-    max-width: 10%;
-    height: auto;
-}
-
-.robotImage {
-    position: absolute;
-    bottom: 5%;
-    right: 20px;
-    height: auto;
-    max-width: 20%;
-    z-index: 999;
 }
 
 .heading {
@@ -91,8 +49,8 @@
 .img {
     width: 150%;
     position: absolute;
-    left: -90px;
-    top: -20px;
+    left: -80px;
+    top: -50px;
 }
 
 .right {
@@ -107,11 +65,11 @@
     font-size: 25px;
     font-weight: 400;
     color: #2c444e;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
-.input {
-    width: 320px;
+.input2 {
+    width: 280px;
     height: 35px;
     padding: 5px;
     margin: 5px 0;
@@ -119,6 +77,17 @@
     border: 1px solid #2c444e;
     border-radius: 2px;
     font-size: 13px;
+}
+
+.input {
+    width: 320px !important;
+    height: 35px !important;
+    padding: 5px !important;
+    margin: 5px 0 !important;
+    outline: none !important;
+    border: 1px solid #2c444e !important;
+    border-radius: 2px !important;
+    font-size: 13px !important;
 }
 
 .btn {
