--- a/client/src/pages/Main/index.css
+++ b/client/src/pages/Main/index.css
@@ -5,69 +5,68 @@
     display: flex;
     text-align: center;
     position: absolute;
-    top: 0;
+    top: 98px;
     bottom: 0;
     left: 0;
     right: 0;
 }
+
 .table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 1rem;
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 1rem;
 }
 
-th, td {
-  border: 1px solid #ccc;
-  padding: 1rem;
-  text-align: left;
+th,
+td {
+    border: 1px solid #ccc;
+    padding: 1rem;
+    text-align: left;
 }
 
 th {
-  background-color: #f5f5f5;
-  color: #222;
-  font-weight: bold;
+    background-color: #f5f5f5;
+    color: #222;
+    font-weight: bold;
 }
 
 tr:nth-child(even) {
-  background-color: #fafafa;
+    background-color: #fafafa;
 }
 
 td:nth-child(3) {
-  font-weight: bold;
-  color: #d32121;
+    font-weight: bold;
+    color: #d32121;
 }
 
 @media (max-width: 767px) {
-  th, td {
-    display: block;
-    width: 100%;
-  }
-  
-  td:nth-child(3) {
-    text-align: center;
-  }
-  
-  tbody tr {
-    border-bottom: 1px solid #ccc;
-    display: block;
-    margin-bottom: .625em;
-  }
-  
-  tbody td {
-    text-align: right;
-    padding-left: 50%;
-    position: relative;
-  }
-  
-  tbody td:before {
-    content: attr(data-label);
-    display: inline-block;
-    font-weight: bold;
-    left: 0;
-    position: absolute;
-    text-align: left;
-    top: .625em;
-  }
+    th,
+    td {
+        display: block;
+        width: 100%;
+    }
+    td:nth-child(3) {
+        text-align: center;
+    }
+    tbody tr {
+        border-bottom: 1px solid #ccc;
+        display: block;
+        margin-bottom: .625em;
+    }
+    tbody td {
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+    }
+    tbody td:before {
+        content: attr(data-label);
+        display: inline-block;
+        font-weight: bold;
+        left: 0;
+        position: absolute;
+        text-align: left;
+        top: .625em;
+    }
 }
 
 .sidemenu {
@@ -171,25 +170,25 @@ h2 {
     font-size: 1.5em;
 }
 
-
-.robot-icon{
+.robot-icon {
     width: 3rem;
     height: 3rem;
 }
+
 ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 li {
-  padding: 5px;
-  background-color: #eeeeee0e;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  cursor: pointer;
+    padding: 5px;
+    background-color: #eeeeee0e;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
 
 li:hover {
-  background-color: #ccc;
+    background-color: #ccc;
 }
